--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,11 @@
     <title>Tornado Chat Demo</title>
     <link rel="stylesheet" href="{{ static_url('chat.css') }}" type="text/css">
   </head>
+  <header>
+    <form action="/autocell" method="get" id="nav_autocell_form">
+      <button>autocell</button>
+    </form>
+  </header>
   <body>
     <div id="body">
       <div id="inbox">
