--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="{{ static_url('chat.css') }}" type="text/css">
   </head>
   <body>
+    <div id="links">
+      <a href="https://www.youtube.com/watch?v=S-OgkNgxm3k">ALERT! ALERT!</a>
+    </div>
     <div id="body">
       <div id="inbox">
         {% for message in messages %}
@@ -21,7 +24,7 @@
                 <input type="text" name="body" id="message" style="width:420px">
               </td>
               <td style="padding-left:5px">
-                <input type="submit" class="button" value="{{ _("Post") }}">
+                <input type="submit" class="button" value="{{ _('Post') }}">
                 <input type="hidden" name="next" value="{{ request.path }}">
                 {% module xsrf_form_html() %}
               </td>
